; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/security/selinux/ss/extr_services.c_avd_init.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/security/selinux/ss/extr_services.c_avd_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.av_decision = type { i32, i64, i32, i64, i64 }

@latest_granting = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.av_decision*)* @avd_init to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @avd_init(%struct.av_decision* %0) #0 {
  %2 = alloca %struct.av_decision*, align 8
  store %struct.av_decision* %0, %struct.av_decision** %2, align 8
  %3 = load %struct.av_decision*, %struct.av_decision** %2, align 8
  %4 = getelementptr inbounds %struct.av_decision, %struct.av_decision* %3, i32 0, i32 4
  store i64 0, i64* %4, align 8
  %5 = load %struct.av_decision*, %struct.av_decision** %2, align 8
  %6 = getelementptr inbounds %struct.av_decision, %struct.av_decision* %5, i32 0, i32 3
  store i64 0, i64* %6, align 8
  %7 = load %struct.av_decision*, %struct.av_decision** %2, align 8
  %8 = getelementptr inbounds %struct.av_decision, %struct.av_decision* %7, i32 0, i32 0
  store i32 -1, i32* %8, align 8
  %9 = load i32, i32* @latest_granting, align 4
  %10 = load %struct.av_decision*, %struct.av_decision** %2, align 8
  %11 = getelementptr inbounds %struct.av_decision, %struct.av_decision* %10, i32 0, i32 2
  store i32 %9, i32* %11, align 8
  %12 = load %struct.av_decision*, %struct.av_decision** %2, align 8
  %13 = getelementptr inbounds %struct.av_decision, %struct.av_decision* %12, i32 0, i32 1
  store i64 0, i64* %13, align 8
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
